[package]
name = "gcf_resource"
version = "0.1.0"
authors = ["Rui Yang <ryang@pivotal.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "in"
path = "src/in.rs"

[[bin]]
name = "out"
path = "src/out.rs"
