[package]
name = "gcf_resource"
version = "0.1.0"
authors = ["Rui Yang <ryang@vmware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloudfunctions1 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "^1.0"

[[bin]]
name = "check"
path = "src/check.rs"

[[bin]]
name = "in"
path = "src/in.rs"

[[bin]]
name = "out"
path = "src/out.rs"

